[package]
name = "gipc"
version = "0.1.1"
edition = "2021"
authors = ["tecc <tecc@tecc.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tecc/gipc"
description = """
A generic abstraction layer over raw sockets for interprocess communication, with async support.
"""
categories = ["network-programming", "asynchronous", "os"]
keywords = ["ipc", "interprocess", "io"]

[dependencies]
async-trait = { version = "0.1.68", optional = true }
byteorder = "1.4.3"
ciborium = "0.2.0"
dirs = "5.0.0"
futures-io = { version = "0.3.28", optional = true }
interprocess = "1.2.1"
serde = "1.0.159"
thiserror = "1.0.40"
tokio = { version = "1.27.0", optional = true, default-features = false }
tokio-util = { version = "0.7.7", optional = true, default-features = false }

[features]
default = ["sync"]
sync = []
async-tokio = [
    "dep:async-trait", "dep:futures-io",
    "tokio/rt", "tokio-util/compat", "interprocess/tokio_support"
]

[[example]]
name = "sync"
required-features = ["sync"]

[[example]]
name = "async-tokio"
required-features = ["async-tokio", "tokio/full"]

[package.metadata.docs.rs]
features = ["sync", "async-tokio"]
